<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calldriver</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">TKU</string>
    <string name="count">帳號:</string>
    <string name="passwd">密碼:</string>
    <string name="btn">登入</string>
    <string name="main_image">main</string>
    <string name="main_btn1">司機</string>
    <string name="main_btn2">乘客</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="driver_checkbox1">載人</string>
    <string name="driver_checkbox2">載貨</string>
    <string name="driver_datasetting">修改資料</string>
    <string name="photo">preset_photo</string>
    <string name="driver_photosetting">修改照片</string>
    <string name="title_activity_dirver_seting">Dirver_setingActivity</string>
    <string name="driver_setting_btn1">確認</string>
    <string name="dirver_setting_ed1">姓名</string>
    <string name="dirver_setting_ed2">手機</string>
    <string name="dirver_setting_ed3">車牌</string>
    <string name="dirver_setting_ed4">車型</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_driver_show">DriverShowActivity</string>

</resources>
