<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calldriver.Driver_setingActivity" >

    <EditText
        android:id="@+id/driver_setting_editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/dirver_setting_ed1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/driver_setting_editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/dirver_setting_ed2"
        android:inputType="phone" />

    <EditText
        android:id="@+id/driver_setting_editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/dirver_setting_ed3"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/driver_setting_editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/dirver_setting_ed4"
        android:inputType="text|textCapCharacters" />

    <Button
        android:id="@+id/driver_setting_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/driver_setting_btn1" />

</LinearLayout>
